Exal And Pdf Implementation and also sending document to Email

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -98,8 +98,8 @@
 		</table>
 	</div>
 	<div class="container text-center ">
-	<a href="" class="btn btn-primary">Exal</a>
-	<a href="" class="btn btn-danger">Pdf</a>
+	<a th:href="@{/exal}" class="btn btn-primary">Exal</a>
+	<a th:href="@{/pdf}" class="btn btn-danger">Pdf</a>
 	</div>
 	<script
 		src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
